fixed title block

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <head>
     <meta charset="utf-8"/>
-    <title>{% block title %} ‧ SITCON 夏令營{% endblock %}</title>
+    <title>{% block title %}{% endblock %} ‧ SITCON Camp 點數系統</title>
     <meta name="description" content="SITCON Summer Camp 學生計算機夏令營點數系統。關於學生計算機年會，請前往 http://sitcon.org/，關於學生計算機夏令營，請前往 http://sitcon.camp。" />
     <meta name="viewport" content="width=device-width" />
     <link rel="shortcut icon" href="{% static 'img/SITCON.ico' %}" />
