modified to fit new design

--- a/app/templates/card/get.html
+++ b/app/templates/card/get.html
@@ -5,5 +5,5 @@
 <h1>恭喜獲得點數卡</h1>
 <h2>{{ card.name }}</h2>
 <p>{{ card.long_desc }}</p>
-<a href="/card/get/{{ card.cid }}" style="appearance: button">取得</a>
+<a href="/card/get/{{ card.cid }}" style="appearance: button; -moz-appearance: button; -webkit-appearance: button">取得</a>
 {% endblock %}
