--- a/app/templates/player/player.html
+++ b/app/templates/player/player.html
@@ -2,8 +2,7 @@
 {% block title %}{{ team.name }}{% endblock %}
 
 {% block content %}
-<h1>{{ team.name }}</h1>
+<h1>{{ team.name }} <span style="font-size:25px">{{ user.get_full_name }}</span></h1>
 <p style="font-size:32px">{{ team.points }} <span style="font-size:20px">點</span></p>
-<a href="/player/history/" style="appearance: button">帳簿</a>
-{% if is_staff %}<a href="/player/edit/{{ player.name }}" style="appearance: button">異動</a>{% endif %} <!-- 要加顏色(# -->
+{% if is_staff %}<a href="/player/edit/{{ player.name }}" style="appearance: button; -moz-appearance: button; -webkit-appearance: button">異動</a>{% endif %} <!-- 要加顏色(# -->
 {% endblock %}
