fix endblock error

--- a/app/templates/player/player.html
+++ b/app/templates/player/player.html
@@ -4,3 +4,5 @@
 {% block content %}
 <h1>{{ team.name }} <span style="font-size:25px">{{ user.get_full_name }}</span></h1>
 <p style="font-size:32px">{{ team.points }} <span style="font-size:20px">點</span></p>
+
+{% endblock %}
