fixed generate function

--- a/app/templates/card/generate.html
+++ b/app/templates/card/generate.html
@@ -2,8 +2,8 @@
 {% block title %}編輯點數卡{% endblock %}
 
 {% block content %}
-<h1>編輯點數卡</h1>
-<form action="{% url 'generate card'%}" method="post">
+<h1>產生點數卡</h1>
+<form action="{% url 'generate card' %}" method="post">
   {% csrf_token %}
   {{ form.as_p }}
   <input type="submit" value="送出"/>
