login page error code

--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -6,7 +6,11 @@
 {% block content %}
 <form action="{% url 'login' id %}" method="post">
   {% csrf_token %}
-  {{ form.as_p }}
+  {% if error %}
+  <p>{{ error }}</p>
+  {% endif %}
+  <label for="id_password">勇者密碼:</label>
+  <input type="passqoes" id="id_password" name="password">
   <input type="submit" value="登入"/>
 </form>
 {% endblock %}
