--- a/app/templates/card/get.html
+++ b/app/templates/card/get.html
@@ -2,9 +2,15 @@
 {% block title %}點數卡{% endblock %}
 
 {% block content %}
+{% if card.retrieved %}
+<h1>這張卡已經被人領取過了喔</h1>
+<h2>{{ card.name }}</h2>
+<a href="{% url 'home' %}">Back</a>
+{% else %}
 <h1>恭喜獲得點數卡</h1>
 <h2>{{ card.name }}</h2>
 <p>{% autoescape off %}{{ card.long_desc }}{% endautoescape %}</p>
 
 <form action="/card/get/{{ card.cid }}" method="post">{% csrf_token %}<input type="submit" value="取得" /></form>
+{% endif %}
 {% endblock %}
