--- a/app/templates/staff/dashboard.html
+++ b/app/templates/staff/dashboard.html
@@ -16,13 +16,12 @@
 <h2>隊伍</h2>
 <ul>
 {% for team in teams %}
-<li>{{ team.name }} {{ team.points }}</li>
-{% endfor %}
-</ul>
-<h2>個人</h2>
+<li>{{ team.name }} ({{ team.tid }}), {{ team.points }} 點</li>
 <ul>
-{% for player in players %}
-<li>{{ player.user.get_full_name }} {{ player.points_acquired }}</li>
+    {% for player in team.player.all %}
+    <li>{{ player.user.get_full_name }} ({{ player.user.username }}), {{ player.points_acquired }} 點</li>
+    {% endfor %}
+</ul>
 {% endfor %}
 </ul>
 
