--- a/app/templates/staff/dashboard.html
+++ b/app/templates/staff/dashboard.html
@@ -14,7 +14,7 @@
   {% elif not card.active and not card.retrieved %}
   尚未啟用
   {% else %}
-  已被領取
+  已被 {{ card.capturer }} 領取
   {% endif %}
   &nbsp;&nbsp;
   <input type="button" onclick="location.href='{% url "edit card" card.cid %}'" value="編輯" /> &nbsp;&nbsp;
@@ -28,7 +28,7 @@
 <li>{{ team.name }} ({{ team.tid }}), {{ team.points }} 點</li>
 <ul>
   {% for player in team.player.all %}
-  <li>{{ player.user.get_full_name }} ({{ player.user.username }}), {{ player.points_acquired }} 點</li>
+  <li>{{ player.user.get_full_name }} ({{ player.user.username }}), {{ player.points_acquired }} 點 <input type="button" onclick="location.href='{% url "feed player" player.user.username %}'" value="餵食" /></li>
   {% endfor %}
 </ul>
 {% endfor %}
@@ -37,7 +37,7 @@
 <h2>Log</h2>
 <ul>
 {% for entry in history_entries %}
-<li>{{ entry.date | date:'Y-m-d H:i:s' }} {{ entry.action_explain }}:&nbsp; {{ entry.user.get_full_name }}
+<li>{{ entry.date | date:'Y-m-d H:i:s' }} &nbsp; {{ entry.user.get_full_name }} ({{ entry.user.username }})&nbsp;&nbsp;{{ entry.action_explain }}:
   {{ entry.card.name }} {{ entry.comment }}</li>
 {% endfor %}
 </ul>
