--- a/app/templates/submit.html
+++ b/app/templates/submit.html
@@ -1,6 +1,14 @@
 {% extends 'base.html' %}
-{% block title %}{% if title %}{{ title }}{% else %}送出{% endif %}{% endblock %}
+{% block title%}{% if success %} 執行成功 {% else %} 錯誤 {% endif %} {% endblock %}
 
 {% block content %}
-{% autoescape off %}{{ content }}{% endautoescape %}
+{% if success %}
+    <h1>{{ title }}</h1>
+    {{ content }}
+    <p><a href="{{ next_page }}">轉身離去</a></p>
+{% else %}
+    <h1>{{ title }}</h1>
+    {{ content }}
+    <p><a href="{% url 'home' %}">轉身離去</a></p>
+{% endif %}
 {% endblock %}
