--- a/app/templates/player/player.html
+++ b/app/templates/player/player.html
@@ -8,22 +8,20 @@
 
 {% if records %}
 <table>
-    <th>
-        <tr>
-            <td>時間</td>
-            <td>行動類別</td>
-            <td>詳細資料</td>
-            <td>註解</td>
-        </tr>
-    </th>
     <tr>
+        <th>時間</th>
+        <th>行動類別</th>
+        <th>詳細資料</th>
+        <th>註解</th>
+    </tr>
     {% for record in records %}
+    <tr>
         <td>{{ record.date | date:'m/d H:i' }}</td>
         <td>{{ record.action_explain }}</td>
         <td>從卡片 {{ record.card.name }} 中得到了 {{ record.card.value }} 分</td>
         <td>{{ record.comment }}</td>
-    {% endfor %}
     </tr>
+    {% endfor %}
 </table>
 {% endif %}
 {% endblock %}
