translate error message

--- a/app/templates/submit.html
+++ b/app/templates/submit.html
@@ -2,13 +2,11 @@
 {% block title%}{% if success %} 執行成功 {% else %} 錯誤 {% endif %} {% endblock %}
 
 {% block content %}
-{% if success %}
     <h1>{{ title }}</h1>
     {{ content }}
+{% if next_page %}
     <p><a href="{{ next_page }}">轉身離去</a></p>
 {% else %}
-    <h1>{{ title }}</h1>
-    {{ content }}
     <p><a href="{% url 'home' %}">轉身離去</a></p>
 {% endif %}
 {% endblock %}
