--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,11 +7,26 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="shortcut icon" href="{% static 'img/SITCON.ico' %}" />
     <link rel="apple-touch-icon" href="{% static 'img/apple-touch-icon.png' %}" />
-  </head>
+    <link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
+     <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+    
+     <script src="http://libs.baidu.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+  
+    <link rel="stylesheet" href="{% static 'css/global.css' %}" /> 
+ </head>
   <body>
+    <div>
     {% include "topbar.html" %}
+    </div>
+    <div id="wrap">
+
+    <div id="divblock">
     {% block content %}
+    </div>
+    </div>
+    <div>
     {% endblock %}
     {# insert any js here #}
+    </div>
   </body>
 </html>
