--- a/app/templates/topbar.html
+++ b/app/templates/topbar.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
    <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" 
          data-target="#example-navbar-collapse">
@@ -10,7 +10,7 @@
          <span class="icon-bar"></span>
          <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">SITCON 點數系統</a>
+      <a class="navbar-brand" href=/#>SITCON 點數系統</a>
    </div>
    <div class="collapse navbar-collapse" id="example-navbar-collapse">
       <ul class="nav navbar-nav" style="right=20px;">
