numerical player login password input

--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -10,7 +10,7 @@
   <p>{{ error }}</p>
   {% endif %}
   <label for="id_password">勇者密碼:</label>
-  <input type="password" id="id_password" name="password">
+  <input type="tel" id="id_password" name="password" />
   <input type="submit" value="登入"/>
 </form>
 {% endblock %}
