--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,7 @@
 {% load staticfiles %}
 <!DOCTYPE html>
   <head>
+    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
     <meta charset="utf-8"/>
     <title>{% block title %}{% endblock %} ‧ SITCON Camp 點數系統</title>
     <meta name="description" content="SITCON Summer Camp 學生計算機夏令營點數系統。關於學生計算機年會，請前往 http://sitcon.org/，關於學生計算機夏令營，請前往 http://sitcon.camp。" />
