--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -62,6 +62,11 @@ body {
     background-color: #333333;
   }
 }
+#tablestyle{
+padding:2px 5px 2px 5px;
+
+
+}
 #divblock {
   font-size: 20px;
   margin-top: 90px;
