--- a/app/templates/staff/dashboard.html
+++ b/app/templates/staff/dashboard.html
@@ -6,11 +6,22 @@
 {% block content %}
 <h1>儀表板（？）</h1>
 <h2>卡片</h2>
-<input type="button" onclick="location.href='{% url "generate card" %}'" value="產生" />
-<input type="button" onclick="location.href='{% url "fast send" %}'" value="產生並發送" />
-<ul>
+<input type="button" onclick="location.href='{% url "generate card" %}'" value="產生" class="btn btn-primary"/>
+<input type="button" onclick="location.href='{% url "fast send" %}'" value="產生並發送" class="btn btn-primary"/>
+<table class="table">
+    <tr>
+        <th>名稱</th>
+        <th>內容</th>
+        <th>功能</th>
+    </tr>
 {% for card in cards %}
-<li><a href="{% url 'view card' card.cid %}">{{ card.name }} ({{ card.cid }}), {{ card.value }} 點</a>&nbsp;&nbsp;
+<tr>
+  <td><a href="{% url 'view card' card.cid %}">{{ card.name }} ({{ card.cid }}), {{ card.value }} 點</a>
+  {% if card.long_desc %}
+  <p>{{ card.long_desc }}</p>
+  {% endif %}
+  </td>
+  <td>
   {% if card.active and not card.retrieved %}
   已啟用，尚未被領取
   {% elif not card.active and not card.retrieved %}
@@ -18,22 +29,23 @@
   {% else %}
   已被 {{ card.capturer }} 領取
   {% endif %}
-  &nbsp;&nbsp;
-  <input type="button" onclick="location.href='{% url "edit card" card.cid %}'" value="編輯" /> &nbsp;&nbsp;
+  </td>
+  <td>
+  <input type="button" onclick="location.href='{% url "edit card" card.cid %}'" value="編輯" class="btn btn-info"/> 
   {% if not card.retrieved %}
-  <input type="button" onclick="location.href='{% url "feed card" card.cid %}'" value="餵給" /> &nbsp;&nbsp;
+  <input type="button" onclick="location.href='{% url "feed card" card.cid %}'" value="餵給" class="btn btn-primary"/> 
   {% endif %}
-  {{ card.long_desc }}
-</li>
+  </td>
+</tr>
 {% endfor %}
-</ul>
+</table>
 <h2>隊伍</h2>
 <ul>
 {% for team in teams %}
 <li>{{ team.name }} ({{ team.tid }}), {{ team.points }} 點</li>
 <ul>
   {% for player in team.player.all %}
-  <li>{{ player.user.get_full_name }} ({{ player.user.username }}), {{ player.points_acquired }} 點 <input type="button" onclick="location.href='{% url "feed player" player.user.username %}'" value="餵食" /></li>
+  <li>{{ player.user.get_full_name }} ({{ player.user.username }}), {{ player.points_acquired }} 點 <input type="button" onclick="location.href='{% url "feed player" player.user.username %}'" value="餵食" class="btn btn-primary"/></li>
   {% endfor %}
 </ul>
 {% endfor %}
