--- a/app/templates/submit.html
+++ b/app/templates/submit.html
@@ -5,8 +5,12 @@
     <h1>{{ title }}</h1>
     {{ content }}
 {% if next_page %}
-    <p><a href="{{ next_page }}">轉身離去</a></p>
+    <div class="row">
+        <a href="{{ next_page }}" class="btn btn-primary col-xs-12 col-md-3 col-md-offset-3">轉身離去</a>
+    </div>
 {% else %}
-    <p><a href="{% url 'home' %}">轉身離去</a></p>
+    <div class="row">
+        <a href="{% url 'home' %}" class="btn btn-primary col-xs-12 col-md-4 col-md-offset-4">轉身離去</a>
+    </div>
 {% endif %}
 {% endblock %}
