--- a/app/templates/player/player.html
+++ b/app/templates/player/player.html
@@ -5,11 +5,11 @@
 <h1>{{ user.player.team.name }} <span style="font-size:25px">{{ user.get_full_name }}</span></h1>
 <p style="font-size:32px">{{ user.player.team.points }} <span style="font-size:20px">點</span></p>
 
-<div>
-{% for players in user.player.team.player.all %}
-<p><span title="{{ players.user.username }}"> <b>{{ players.user.get_full_name }}</b></span>: {{ players.points_acquired }} 點</p>
+<table>
+{% for each_player in sorted_players %}
+<tr><td><span style="font-weight: bold;">{{ each_player.user.get_full_name }}</span></td><td>{{ each_player.points_acquired }} 點</td></tr>
 {% endfor %}
-</div>
+</table>
 
 {% if records %}
 <table>
