--- a/app/templates/player/player.html
+++ b/app/templates/player/player.html
@@ -19,7 +19,7 @@
         <th id="tablestyle" >詳細資料</th>
         <th id="tablestyle">註解</th>
     </tr>
-    {% for record in records %}
+    {% for record in records|dictsort:"date" reversed %}
     <tr>
         <td id="tablestyle">{{ record.date | date:'m/d H:i' }}</td>
         <td id="tablestyle">{{ record.action_explain }}</td>
