--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,11 +8,9 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="shortcut icon" href="{% static 'img/SITCON.ico' %}" />
     <link rel="apple-touch-icon" href="{% static 'img/apple-touch-icon.png' %}" />
-    <link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
      <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
-    
-     <script src="http://libs.baidu.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-  
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script> 
     <link rel="stylesheet" href="{% static 'css/global.css' %}" /> 
  </head>
   <body>
