--- a/app/templates/player/player.html
+++ b/app/templates/player/player.html
@@ -1,16 +1,47 @@
 {% extends 'base.html' %}
 {% block title %}{{ user.player.team.name }}{% endblock %}
 {% block content %}
+<script>
+</script>
 <div class="well">
-<h1>{{ user.player.team.name }} <span style="font-size:25px">{{ user.get_full_name }}</span></h1>
-<p style="font-size:32px">{{ user.player.team.points }} <span style="font-size:20px">點</span></p>
-
-<table>
+<h1>{{ user.player.team.name }} <span style="font-size:25px" class="badge">{{ user.player.team.points }} 點</span></h1>
+<div>
+<table class="table" style="font-size:16px" id="percentclac" >
+<tr><td><span style="font-weight: bold;">積分統計</span></td>
+<td>
+<span style="font-size:14px" class="badge">100%</span>
+</td>
+<td>
+<div class="progress">
+  <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+    <span style="color:#000;">{{ user.player.team.points }} / {{ user.player.team.points }}</span>
+  </div>
+</div>
+</td></tr>
 {% for each_player in sorted_players %}
-<tr><td><span style="font-weight: bold;">{{ each_player.user.get_full_name }}</span></td><td>{{ each_player.points_acquired }} 點</td></tr>
+<tr><td><span style="font-weight: bold;">{{ each_player.user.get_full_name }}</span></td>
+<td>
+<span style="font-size:14px" class="badge">
+    <form onsubmit = "return false" oninput = "r.value=x.valueAsNumber * y.valueAsNumber" > 
+    <output name = "r" for = > "{{ each_player.points_acquired }} {{ user.player.team.points }}"</output> 
+    </form> 
+</td>
+<td><div class="progress">
+  <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width : calc({{ each_player.points_acquired }} / {{ user.player.team.points }}  * 100%);">
+   <span style="color:#000;">{{ each_player.points_acquired }} / {{ user.player.team.points }}</span>
+  </div>
+</div>
+</td></tr>
 {% endfor %}
 </table>
-
+<div class="progress" id="slack">
+{% for each_player in sorted_players %}
+  <div class="progress-bar progress-bar-success" style="width: {{ each_player.weight}} ">
+    <span class="sr-only">35% Complete (success)</span>
+  </div>
+{% endfor %}
+  </div>
+</div>
 {% if records %}
 <div class="panel-group"  id="accordion">  
     <div class="panel panel-default">   
