--- a/app/templates/topbar.html
+++ b/app/templates/topbar.html
@@ -10,7 +10,7 @@
          <span class="icon-bar"></span>
          <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href=/#>SITCON 點數系統</a>
+      <a class="navbar-brand" href=/#>SITCON 點數系統 <a class="navbar-brand" style="font-size:14px;">勇者：{{ user.get_full_name }}</a></a>
    </div>
    <div class="collapse navbar-collapse" id="example-navbar-collapse">
       <ul class="nav navbar-nav" style="right=20px;">
