--- a/app/templates/staff/dashboard.html
+++ b/app/templates/staff/dashboard.html
@@ -4,10 +4,23 @@
 {% endblock %}
 
 {% block content %}
+<div class="well">
 <h1>儀表板（？）</h1>
 <h2>卡片</h2>
 <input type="button" onclick="location.href='{% url "generate card" %}'" value="產生" class="btn btn-primary"/>
 <input type="button" onclick="location.href='{% url "fast send" %}'" value="產生並發送" class="btn btn-primary"/>
+<br></br>
+<div class="panel-group"  id="accordion">  
+    <div class="panel panel-default">   
+        <div class="panel-heading">  
+            <div class="panel-title">  
+                <a href="#panel1" class="panel-toggle" data-toggle="collapse" data-parent="#accordion">  
+                    展開或是收起卡片
+                </a>  
+            </div>  
+        </div>  
+        <div id="panel1" class="panel-collapse collapse"> 
+<div class="panel-body">
 <table class="table">
     <tr>
         <th>名稱</th>
@@ -39,24 +52,32 @@
 </tr>
 {% endfor %}
 </table>
+</div>
+</div>
+</div>
 <h2>隊伍</h2>
+
 <ul>
+<table class="table">
 {% for team in teams %}
+<tr><td>
 <li>{{ team.name }} ({{ team.tid }}), {{ team.points }} 點</li>
 <ul>
   {% for player in team.player.all %}
   <li>{{ player.user.get_full_name }} ({{ player.user.username }}), {{ player.points_acquired }} 點 <input type="button" onclick="location.href='{% url "feed player" player.user.username %}'" value="餵食" class="btn btn-primary"/></li>
   {% endfor %}
 </ul>
+</td></tr>
 {% endfor %}
 </ul>
+</table>
 
 <h2>Log</h2>
-<ul>
+<table class="table">
 {% for entry in history_entries %}
-<li>{{ entry.date | date:'Y-m-d H:i:s' }} &nbsp; {{ entry.user.get_full_name }} ({{ entry.user.username }})&nbsp;&nbsp;{{ entry.action_explain }}:
-  {{ entry.card.name }} {{ entry.comment }}</li>
+<tr><td>{{ entry.date | date:'Y-m-d H:i:s' }} &nbsp; {{ entry.user.get_full_name }} ({{ entry.user.username }})&nbsp;&nbsp;{{ entry.action_explain }}:
+  {{ entry.card.name }} {{ entry.comment }}</td><tr>
 {% endfor %}
-</ul>
-
+</table>
+</div>
 {% endblock %}
