use google CDN for jQuery lib

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,10 +8,10 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="shortcut icon" href="{% static 'img/SITCON.ico' %}" />
     <link rel="apple-touch-icon" href="{% static 'img/apple-touch-icon.png' %}" />
-     <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script> 
-    <link rel="stylesheet" href="{% static 'css/global.css' %}" /> 
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="{% static 'css/global.css' %}" />
  </head>
   <body>
 
@@ -20,7 +20,7 @@
             {% include "topbar.html" %}
         </div>
     </div>
-    
+
 
     <div class="container">
         <div class="col-lg-1"></div>
