--- a/app/templates/card/card.html
+++ b/app/templates/card/card.html
@@ -35,7 +35,7 @@
 <p style="font-size:22px"> 卡片狀態： </p>
 </td>
 <td>
-<p style="font-size:22px"> 
+<p style="font-size:22px">
   {% if card.active and not card.retrieved %}
   已啟用，尚未被領取
   {% elif not card.active and not card.retrieved %}
@@ -51,14 +51,14 @@
 <p style="font-size:22px"> 卡片敘述： </p>
 </td>
 <td>
-<p style="font-size:22px"> 
+<p style="font-size:22px">
 {% autoescape off %}<p style="font-size:22px"> {{ card.long_desc }} </p> {% endautoescape %}
 </p>
 </td>
 </tr>
 </table>
 <div class="btn-group btn-group-justified" role="group">
-<a class="btn btn-primary" role="button" href="#" style="font-size:26px">轉身離去</a>
+  <a class="btn btn-primary" role="button" href="{% url 'home' %}" style="font-size:26px">轉身離去</a>
 </div>
 <br style="font-size:22px">
 </div>
