--- a/app/templates/topbar.html
+++ b/app/templates/topbar.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
 <html>
-<body>
-
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-   <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" 
-         data-target="#example-navbar-collapse">
-         <span class="icon-bar"></span>
-         <span class="icon-bar"></span>
-         <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href=/#>SITCON 點數系統 {% if request.user.is_authencated %}<a class="navbar-brand" style="font-size:14px;">勇者：{{ user.get_full_name }}</a>{% endif %}</a>
-   </div>
-   <div class="collapse navbar-collapse" id="example-navbar-collapse">
-      <ul class="nav navbar-nav" style="right=20px;">
-          {% if request.user.is_authenticated %}
-          <li class="active"><a style="text-align:right;" href="{% url 'logout' %}">登出</a></li>
-          {% endif %}
-            </ul>
-         </li>
-      </ul>
-   </div>
-</nav>
+  <body>
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href=/#>SITCON 點數系統</a>
+      </div>
+      {% if request.user.is_authenticated %}
+      <div class="collapse navbar-collapse pull-right" id="navbar-collapse">
+        <ul class="nav navbar-nav" style="text-align: right;">
+          <li class="navbar-text" style="font-size: 18px;">勇者：{{ user.last_name }}ZSHOne</li>
+          <li class="active"><a href="{% url 'logout' %}">登出</a></li>
+        </ul>
+      </div>
+      {% endif %}
+    </nav>
 
 
-</body>
+  </body>
 </html>
